tests/baselines/reference/widenedTypes.errors.txt
widenedTypes.ts(1,1): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
widenedTypes.ts(2,17): error TS2359: The right-hand side of an 'instanceof' expression must be either of type 'any', a class, function, or other type assignable to the 'Function' interface type, or an object type with a 'Symbol.hasInstance' method.
widenedTypes.ts(4,1): error TS18050: The value 'null' cannot be used here.
widenedTypes.ts(5,7): error TS18050: The value 'null' cannot be used here.
widenedTypes.ts(7,15): error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'never'.
widenedTypes.ts(9,14): error TS2695: Left side of comma operator is unused and has no side effects.
widenedTypes.ts(10,1): error TS2322: Type 'string' is not assignable to type 'number'.
widenedTypes.ts(12,5): error TS2322: Type '3' is not assignable to type 'undefined'.
widenedTypes.ts(13,1): error TS2322: Type '3' is not assignable to type 'undefined'.
widenedTypes.ts(17,1): error TS2322: Type 'string' is not assignable to type 'number'.
widenedTypes.ts(19,37): error TS2322: Type 'string' is not assignable to type 'undefined'.
widenedTypes.ts(22,22): error TS2322: Type 'number' is not assignable to type 'string'.
widenedTypes.ts(22,25): error TS2322: Type 'null' is not assignable to type 'string'.
widenedTypes.ts(23,39): error TS2322: Type 'number' is not assignable to type 'string'.
widenedTypes.ts(23,45): error TS2322: Type 'null' is not assignable to type 'string'.


==== widenedTypes.ts (15 errors) ====
    null instanceof (() => { });
    ~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    ({}) instanceof null; // Ok because null is a subtype of function
                    ~~~~
!!! error TS2359: The right-hand side of an 'instanceof' expression must be either of type 'any', a class, function, or other type assignable to the 'Function' interface type, or an object type with a 'Symbol.hasInstance' method.
    
    null in {};
    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    "" in null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    
    for (var a in null) { }
                  ~~~~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'never'.
    
    var t = [3, (3, null)];
                 ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    t[3] = "";
    ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    var x: typeof undefined = 3;
        ~
!!! error TS2322: Type '3' is not assignable to type 'undefined'.
    x = 3;
    ~
!!! error TS2322: Type '3' is not assignable to type 'undefined'.
    
    var y;
    var u = [3, (y = null)];
    u[3] = "";
    ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    var ob: { x: typeof undefined } = { x: "" };
                                        ~
!!! error TS2322: Type 'string' is not assignable to type 'undefined'.
!!! related TS6500 widenedTypes.ts:19:11: The expected type comes from property 'x' which is declared here on type '{ x: undefined; }'
    
    // Highlights the difference between array literals and object literals
    var arr: string[] = [3, null]; // not assignable because null is not widened. BCT is {}
                         ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                            ~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    var obj: { [x: string]: string; } = { x: 3, y: null }; // assignable because null is widened, and therefore BCT is any
                                          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 widenedTypes.ts:23:12: The expected type comes from this index signature.
                                                ~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
!!! related TS6501 widenedTypes.ts:23:12: The expected type comes from this index signature.